[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Components/HInputFieldGroup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Components/LabeledTextFieldGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Components/DropBoxGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Profile Scripts/Weaknesses.gd" type="Script" id=4]
[ext_resource path="res://Themes/Styles/tab_line_edit_stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://Scripts/Profile Scripts/Title.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Profile Scripts/Nindo.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Profile Scripts/Personality.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Components/Background.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Profile Scripts/Strengths.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Profile Scripts/Affiliation.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Profile Scripts/Fears.gd" type="Script" id=12]

[node name="SocPerContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="."]
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="AffiliationDropBox" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 70.0
script = ExtResource( 11 )

[node name="Label" parent="AffiliationDropBox" index="0"]
text = "Affiliation:"

[node name="ShinobiTitle" parent="." instance=ExtResource( 1 )]
margin_top = 80.0
margin_bottom = 120.0
script = ExtResource( 6 )

[node name="Label" parent="ShinobiTitle" index="0"]
margin_left = 145.0
margin_right = 420.0
rect_min_size = Vector2( 275, 40 )
text = "Title"

[node name="LineEdit" parent="ShinobiTitle" index="1"]
margin_left = 424.0
margin_right = 674.0

[node name="Container" parent="ShinobiTitle" index="2"]
margin_left = 678.0
margin_right = 878.0

[node name="NindoTextFieldGroup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 262.0
margin_top = 130.0
margin_right = 762.0
margin_bottom = 260.0
size_flags_horizontal = 4
script = ExtResource( 7 )

[node name="Label" parent="NindoTextFieldGroup" index="0"]
text = "Nindo"

[node name="TextEdit" parent="NindoTextFieldGroup" index="1"]
margin_bottom = 130.0
rect_min_size = Vector2( 500, 100 )

[node name="PersonalityTextFieldGroup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 262.0
margin_top = 270.0
margin_right = 762.0
margin_bottom = 500.0
size_flags_horizontal = 4
script = ExtResource( 8 )

[node name="Label" parent="PersonalityTextFieldGroup" index="0"]
text = "Personality"

[node name="BackgroundTextFieldGroup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 262.0
margin_top = 510.0
margin_right = 762.0
margin_bottom = 740.0
size_flags_horizontal = 4
script = ExtResource( 9 )

[node name="Label" parent="BackgroundTextFieldGroup" index="0"]
text = "Background"

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 262.0
margin_top = 750.0
margin_right = 762.0
margin_bottom = 840.0
grow_horizontal = 2
rect_min_size = Vector2( 500, 90 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Strengths" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Strengths"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Strengths/VBoxContainer"]
margin_right = 492.0
margin_bottom = 16.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Strengths/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_top = 2.0
margin_right = 244.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Strength 1"
align = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Strengths/VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 358.0
margin_bottom = 16.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Strengths/VBoxContainer"]
margin_top = 20.0
margin_right = 492.0
margin_bottom = 36.0
alignment = 1

[node name="Label2" type="Label" parent="TabContainer/Strengths/VBoxContainer/HBoxContainer2"]
margin_left = 134.0
margin_top = 2.0
margin_right = 244.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Strength 2"
align = 2

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Strengths/VBoxContainer/HBoxContainer2"]
margin_left = 248.0
margin_right = 358.0
margin_bottom = 16.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weaknesses" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Weaknesses"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Weaknesses/VBoxContainer2"]
margin_right = 500.0
margin_bottom = 25.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer"]
margin_left = 137.0
margin_top = 2.0
margin_right = 247.0
margin_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Weakness 1"
align = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer"]
margin_left = 252.0
margin_right = 362.0
margin_bottom = 25.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Weaknesses/VBoxContainer2"]
margin_top = 29.0
margin_right = 500.0
margin_bottom = 54.0
alignment = 1

[node name="Label2" type="Label" parent="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer2"]
margin_left = 137.0
margin_top = 2.0
margin_right = 247.0
margin_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Weakness 2"
align = 2

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer2"]
margin_left = 252.0
margin_right = 362.0
margin_bottom = 25.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fears" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 12 )

[node name="VBoxContainer3" type="VBoxContainer" parent="TabContainer/Fears"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Fears/VBoxContainer3"]
margin_right = 500.0
margin_bottom = 25.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Fears/VBoxContainer3/HBoxContainer"]
margin_left = 137.0
margin_top = 2.0
margin_right = 247.0
margin_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Fears 1"
align = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Fears/VBoxContainer3/HBoxContainer"]
margin_left = 252.0
margin_right = 362.0
margin_bottom = 25.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Fears/VBoxContainer3"]
margin_top = 29.0
margin_right = 500.0
margin_bottom = 54.0
alignment = 1

[node name="Label2" type="Label" parent="TabContainer/Fears/VBoxContainer3/HBoxContainer2"]
margin_left = 137.0
margin_top = 2.0
margin_right = 247.0
margin_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Fears 2"
align = 2

[node name="LineEdit2" type="LineEdit" parent="TabContainer/Fears/VBoxContainer3/HBoxContainer2"]
margin_left = 252.0
margin_right = 362.0
margin_bottom = 25.0
rect_min_size = Vector2( 110, 0 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="AffiliationDropBox/OptionButton" to="AffiliationDropBox" method="_on_OptionButton_item_selected"]
[connection signal="focus_exited" from="ShinobiTitle/LineEdit" to="ShinobiTitle" method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="ShinobiTitle/LineEdit" to="ShinobiTitle" method="_on_LineEdit_text_changed"]
[connection signal="focus_exited" from="NindoTextFieldGroup/TextEdit" to="NindoTextFieldGroup" method="_on_TextEdit_focus_exited"]
[connection signal="focus_exited" from="PersonalityTextFieldGroup/TextEdit" to="PersonalityTextFieldGroup" method="_on_TextEdit_focus_exited"]
[connection signal="focus_exited" from="BackgroundTextFieldGroup/TextEdit" to="BackgroundTextFieldGroup" method="_on_TextEdit_focus_exited"]
[connection signal="focus_exited" from="TabContainer/Strengths/VBoxContainer/HBoxContainer/LineEdit" to="TabContainer/Strengths" method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="TabContainer/Strengths/VBoxContainer/HBoxContainer/LineEdit" to="TabContainer/Strengths" method="_on_LineEdit_text_changed"]
[connection signal="focus_exited" from="TabContainer/Strengths/VBoxContainer/HBoxContainer2/LineEdit2" to="TabContainer/Strengths" method="_on_LineEdit2_focus_exited"]
[connection signal="text_changed" from="TabContainer/Strengths/VBoxContainer/HBoxContainer2/LineEdit2" to="TabContainer/Strengths" method="_on_LineEdit2_text_changed"]
[connection signal="focus_exited" from="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer/LineEdit" to="TabContainer/Weaknesses" method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer/LineEdit" to="TabContainer/Weaknesses" method="_on_LineEdit_text_changed"]
[connection signal="focus_exited" from="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer2/LineEdit2" to="TabContainer/Weaknesses" method="_on_LineEdit2_focus_exited"]
[connection signal="text_changed" from="TabContainer/Weaknesses/VBoxContainer2/HBoxContainer2/LineEdit2" to="TabContainer/Weaknesses" method="_on_LineEdit2_text_changed"]
[connection signal="focus_exited" from="TabContainer/Fears/VBoxContainer3/HBoxContainer/LineEdit" to="TabContainer/Fears" method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="TabContainer/Fears/VBoxContainer3/HBoxContainer/LineEdit" to="TabContainer/Fears" method="_on_LineEdit_text_changed"]
[connection signal="focus_exited" from="TabContainer/Fears/VBoxContainer3/HBoxContainer2/LineEdit2" to="TabContainer/Fears" method="_on_LineEdit2_focus_exited"]
[connection signal="text_changed" from="TabContainer/Fears/VBoxContainer3/HBoxContainer2/LineEdit2" to="TabContainer/Fears" method="_on_LineEdit2_text_changed"]

[editable path="AffiliationDropBox"]

[editable path="ShinobiTitle"]

[editable path="NindoTextFieldGroup"]

[editable path="PersonalityTextFieldGroup"]

[editable path="BackgroundTextFieldGroup"]
